--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-	<h3>Créer une nouvelle question :</h3>
+	<h3>Nouvelle question :</h3>
 	<form [formGroup]="questionForm">
 	<label for="questionName">Intitulé</label>
 	<br>
