--- a/front-end/src/app/core/players/player-view/player-view.component.scss
+++ b/front-end/src/app/core/players/player-view/player-view.component.scss
@@ -24,3 +24,12 @@
     padding-top: 5%;
     text-align: center;
 }
+
+.frame-little {
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+    height: 10%;
+    width: 10%;
+}
