--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
@@ -5,7 +5,8 @@
 <!-- button: "Nouveau quiz" to triger it-->
 <!--<app-quiz-form class="quiz-form"></app-quiz-form>-->
 <div class="newQuiz">
-<button class="button-card" (click) = "switchShowQuizForm(true)">Ajouter un nouveau Quiz <i class="fas fa-plus-circle"></i></button>
+<button class="button-card" (click) = "switchShowQuizForm(true)">
+    <i class="fas fa-plus-circle"></i> Nouveau Quiz</button>
 <div *ngIf = "showQuizForm">
     <app-quiz-form-modal (quitForm) = "switchShowQuizForm(false)"></app-quiz-form-modal>
 </div>
