--- a/front-end/src/app/gallery/gallery.component.scss
+++ b/front-end/src/app/gallery/gallery.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/images.scss';
+@import 'src/styles/layout.scss';
 
 .responsive-list {
     display: flex;
@@ -16,4 +17,9 @@
 
 .wide-button {
     width: 100%;
+}
+
+.delete {
+    margin-left: 300%;
+    margin-right: 0;
 }
