--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -1,8 +1,7 @@
 <button class="button-card" (click)="goBack()"> Retour </button>
 
 <div *ngIf="player">
-    <app-player [player]="player"></app-player>
-
+    <!--<app-player [player]="player"></app-player>-->
     <div class="flex-list">
         <div *ngFor="let attempt of playerAttempts" >
             <app-quiz-attempt [attempt]="attempt" routerLink="./{{attempt.id}}"></app-quiz-attempt>
