--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
@@ -1,15 +1,12 @@
 <button class="button-card" routerLink= "/admin">Retour</button>
 <button class="button-card" routerLink= "/">Home</button>
 <br>
-<!-- put in a bootstrap modal -->
-<!-- button: "Nouveau quiz" to triger it-->
-<!--<app-quiz-form class="quiz-form"></app-quiz-form>-->
+
+
 <div class="newQuiz">
-<button class="button-card" (click) = "switchShowQuizForm(true)">
-    <i class="fas fa-plus-circle"></i> Nouveau Quiz</button>
-<div *ngIf = "showQuizForm">
-    <app-quiz-form-modal (quitForm) = "switchShowQuizForm(false)"></app-quiz-form-modal>
-</div>
+    <button type="button" class="button-card" (click)="modalService.open(formModal)"> 
+        <i class="fas fa-plus-circle"></i> Nouveau Quiz
+    </button>
 </div>
 
 <div class="quiz-list">
@@ -21,5 +18,18 @@
         </button>
     </div>
 </div>
+
+
+<ng-template #formModal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Créer un nouveau quiz :</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <app-quiz-form-modal (quitForm) = "modal.close()"></app-quiz-form-modal>
+    </div>
+</ng-template>
 
 
