--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
@@ -1,28 +1,9 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/images.scss';
+@import "src/styles/variables";
+
 @import 'src/styles/layout.scss';
 
-h1 {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-h2 {
-    color: blue;
-}
-
-.creationDate{
-    font-size: x-small;
-}
-
-i {
-    width: 250px;
-    text-align: center;;
-}
-
-.hidden {
-    opacity: 0;
-    position: absolute;
-    z-index: -1;
-}
 
 .label {
     //margin-top: 0.5em;
