--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -3,19 +3,19 @@
 <br>
 
 <div *ngIf ="quiz && (!quiz.imageId || image.url)">
-  <div *ngIf = "!showQuizForm" class="horizontal-center ">
+  <div class="horizontal-center ">
     <div class = "quizName"><h1>Nom du quiz : {{quiz.name}}</h1></div> 
     <div class = "quizTheme" ><h2>Thème : {{quiz.theme}}</h2></div>
     <div *ngIf="image.url" class="frame-little"><img class = "thumbnail" [src]="imageService.getImgSrc1(image)" alt="quiz image"></div>
-    <button class="button-card" id = "editQuizName" (click)="modalService.open(formModal)">Modifier</button>
+    <button class="button-card" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier</button>
   </div>
   <app-question-list [quiz]="quiz"></app-question-list>
 </div>
 
 
-<ng-template #formModal let-modal>
+<ng-template #quizEditModal let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Créer un nouveau quiz :</h4>
+    <h4 class="modal-title" id="modal-basic-title">Modifier les informations du quiz :</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
